# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jan 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha42.ebuild, +sun-jdk-1.7.0.0_alpha44.ebuild:
  Version bump.

  16 Jan 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha41.ebuild, +sun-jdk-1.7.0.0_alpha43.ebuild:
  Version bump.

  05 Jan 2009; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.6.0.12_beta3.ebuild, +sun-jdk-1.6.0.12_beta3-r1.ebuild,
  files/sun-jdk-1.6.env:
  Revbump to fix the env file.

  25 Dec 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.6.0.12_beta2.ebuild, +sun-jdk-1.6.0.12_beta3.ebuild:
  Version bump.

*sun-jdk-1.7.0.0_alpha42 (22 Dec 2008)

  06 Dec 2008: Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha42.ebuild -sun-jdk-1.7.0.0_alpha40.ebuild:
  Bump.

  12 Dec 2008; Vlastimil Babka <caster@gentoo.org>
  +sun-jdk-1.6.0.12_beta2.ebuild:
  Version bump for a pre-release of sun-jdk 6u12 which finally brings an
  amd64 browser plugin. Note that you need to sync your main tree to get a
  recent profile update unmasking the nsplugin flag.

*sun-jdk-1.7.0.0_alpha41 (06 Dec 2008)

  06 Dec 2008: Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha41.ebuild -sun-jdk-1.7.0.0_alpha39.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha40 (22 Nov 2008)

  22 Nov 2008: Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha40.ebuild -sun-jdk-1.7.0.0_alpha3.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha39 (07 Nov 2008)
  
  07 Nov 2008; Fabian Fingerle <fabian@datensalat.eu>
  +sun-jdk-1.7.0.0_alpha39.ebuild -sun-jdk-1.7.0.0_alpha37.ebuild:
  Bump.

*sun-jdk-1.7.0.0_alpha38 (27 Oct 2008)

  27 Oct 2008; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha36.ebuild, +sun-jdk-1.7.0.0_alpha38.ebuild
  Bump.

  17 Oct 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.6.0.10_beta32.ebuild, -sun-jdk-1.6.0.10.ebuild:
  In tree.
