@@ -7,8 +7,11 @@ DIST jdk-7-ea-bin-b43-linux-i586-15_jan_2009.bin 63160063 RMD160 41e08b1a591ac95
 DIST jdk-7-ea-bin-b43-linux-x64-15_jan_2009.bin 56598471 RMD160 8830757a51a41f85a29a576bbf87d330b268df8f SHA1 e46a9e7bc9e3671db0e11c4433e8704c054ad225 SHA256 45d7b15f73fce84c841c83a13a342d469403c0f605c274dbf637b343f3cf0e96
 DIST jdk-7-ea-bin-b44-linux-i586-22_jan_2009.bin 63160612 RMD160 a3edd3fbe60fcee56f8dd9359369f941005ab161 SHA1 a6fa4c9f45c7098f6924219ba01dd965f6cee2ef SHA256 6d4e1c618c449688434ae46eb3dcfbd5df0c5c46be2b33fb5795b60521acf67a
 DIST jdk-7-ea-bin-b44-linux-x64-22_jan_2009.bin 56599679 RMD160 e14b27a4c52e3a602667549d3e104dafb6c8e43e SHA1 0c88f52cf84249340728ad8c04be101698698fc9 SHA256 9f888a5e4385764161b36a002323496adde864a1b396e1072555b2cac1913306
+DIST jdk-7-ea-bin-b45-linux-i586-29_jan_2009.bin 63159021 RMD160 29b28b256f44a87611abef9413cfa826b11b3f00 SHA1 d6443fffb64a06abc6cb8f0ce51ce0a78ae7a796 SHA256 7c6fa1055208293e87c5a6ac2862bae14943f7aceb50bb15c0afa793b060a9c4
+DIST jdk-7-ea-bin-b45-linux-x64-29_jan_2009.bin 56598781 RMD160 6d313e5315e9ec32484248881b294f54fb196d2c SHA1 6b7a5b47edc21ba60625db96704a08d0dd6498a1 SHA256 b6c0b4c6ff933f8fb43eba785cdda01ac29fa4e34c7d0d0a77be567b5fad2b8e
 EBUILD sun-jdk-1.6.0.12_beta3-r1.ebuild 5511 RMD160 ccbe7c6145b641fa285821424f0b3d0c05349ae3 SHA1 0f7afe93569a76e8e288ca32889896a6e71dfde8 SHA256 f4a77aceb5f7d814337f710c53f5fd94e22ed92efbc911eb109acec60a98ebb9
 EBUILD sun-jdk-1.7.0.0_alpha43.ebuild 4669 RMD160 875e62fef01c49fa64533769ab64b4fc25697ac3 SHA1 b14df1a8470cbe41535e731aee76522161270fb2 SHA256 967c3360f1b1108d3aa50ce8f19ae67d53c336c495e6af44f7dbab5db620cd8a
 EBUILD sun-jdk-1.7.0.0_alpha44.ebuild 4669 RMD160 ef313cc71e12bb5143f13fbd30d917b4c4e53be1 SHA1 95c27d5548050574fc338607bf96a1a17fbc1cb5 SHA256 2c873cc02f292cee9a80c29a472abc55261f0299143eac8d03801ec68a41bfe3
-MISC ChangeLog 10865 RMD160 a6da2718ec673d68678f9a44522d220d8b533aa9 SHA1 7004a9b14c9d2150d9e70ba38b72c0cb159bcac5 SHA256 f25bba87335f0c7ecbbbb60a1284452d651766dee7f89c36b80432e15995de97
-MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
+EBUILD sun-jdk-1.7.0.0_alpha45.ebuild 4573 RMD160 f6545481426b3524f14e3696d4323dd9d5774f3b SHA1 60481c4cf8d4988977e5ab85ecb0886a931542d6 SHA256 b14624cd8358cb3b6d28c73b3aa1c615fe74f962981a0986e4fb21965b068c1b
+MISC ChangeLog 10981 RMD160 2dac43b2f4d1d7a9f2d5af004403624bb4d54c59 SHA1 657a0f794855c6f8ded377a4007f17c097fc99b5 SHA256 0f6ff64880def6edbc51640694f68cb4291250fbb44abeef0bcd0918f09c45fc
+MISC metadata.xml 229 RMD160 cfb20c76828370afd4aa3509e82d73dc01868ad8 SHA1 c70889a83225d08e4c97480a577c26e07466d714 SHA256 552df738ffd9f53ff574607e8c1ed60920f2b20a73dedc4f200892f58c323a93
